--- a/.gitignore
+++ b/.gitignore
@@ -4,30 +4,61 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+### Java ###
+*.class
+*.jar
+*.war
+*.ear
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
 
 ### IntelliJ IDEA ###
-.idea
-*.iws
+.idea/
 *.iml
+*.iws
+out/
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+### OS ###
+.DS_Store
+Thumbs.db
 
-### VS Code ###
+### Logs ###
+*.log
+logs/
+spring.log
+
+### Docker ###
+*.pid
+docker-compose.override.yml
+.env
+.env.*
+
+### Lombok ###
+*.lombok.log
+
+### Database ###
+*.mv.db
+*.h2.db
+*.sqlite
+*.db
+*.sql
+*.dump
+
+### Test Reports ###
+surefire-reports/
+test-output/
+
+### Others ###
+node_modules/
 .vscode/
